src/components/navbar/navbar.css
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
}
.navbar-logo-text {
  margin: 0;
}

.navbar-options {
  display: flex;
  gap: 10px;
}
.navbar-option {
  border-radius: 12px;
  padding-block: 6px;
}
.navbar-options > .navbar-option:hover {
  border-radius: 12px;
  background-color: var(--main-color-200);
}
.navbar-option > a {
  text-decoration: none;
  color: black;
}

